# libsecale

./: CMakeLists.txt  README.md
src/: dummy.cpp
